price tag alignment issue fixed in plp

--- a/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-luxury/sass/site/pages/_plp.scss
+++ b/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-luxury/sass/site/pages/_plp.scss
@@ -235,13 +235,13 @@
 					span.original-price{
 						text-decoration: line-through;
 						margin-right:10px;
+                        color: $mlight-gray;
 					}
 					span.savings{
 						color:#da3549;
 					}
                     span.sale-price{
-						float: right;
-                        text-align: right;
+                        padding-left: 20px;
 					}
 				}
 			}
